grammar.js
        source_file: ($) => repeat($._top_level_item),

        _top_level_item: ($) =>
            choice(
                // Sections (each wraps its keyword + body)
                $.section,

                // Headers
                $.program_name,
                $.module_name,

                // Items that may appear outside any section
                $._section_body_item,
            ),

        // Items that can appear inside a DEFINE_* section body.
        // Kept as a hidden rule so it doesn't create extra nodes.
        _block_item: ($) =>
            choice(
                // Definitions
                $.define_function,
                $.type_definition,
                $.define_call,
                $.define_module,

                // Block-level declarations
                $.declaration,

                // Statements
                $.statement,

                // Preprocessor
                $.preproc_if_defined,
                $.preproc_if_not_defined,
                $.preproc_define,
                $.preproc_include,
                $.preproc_warn,
                $.preproc_disable_warning,
            ),

        // Include all keyword nodes
        ...keywords,

        // Include all netlinx nodes
        ...netlinx.constants,
        ...netlinx.types,
        ...netlinx.variables,
        ...netlinx.functions,

        event_definition: ($) =>
            choice(
                $.button_event_definition,
                $.channel_event_definition,
                $.level_event_definition,
                $.data_event_definition,
                $.timeline_event_definition,
                $.custom_event_definition,
                $.push_event_definition,
                $.release_event_definition,
            ),

        data_event_definition: ($) =>
            seq(
                $._data_event_declarator_list,
                field("body", $.data_event_block),
            ),

        _data_event_declarator_list: ($) =>
            seq(
                $.data_event_declarator,
                repeat(
                    choice(
                        $.data_event_declarator,
                        alias(
                            $.preproc_if_defined_in_data_event_declarator,
                            $.preproc_if_defined,
                        ),
                        alias(
                            $.preproc_if_not_defined_in_data_event_declarator,
                            $.preproc_if_not_defined,
                        ),
                        $.preproc_define,
                        $.preproc_include,
                    ),
                ),
            ),

        data_event_declarator: ($) =>
            seq(
                $.data_event_keyword,
                field("device", $.data_event_device_reference),
            ),

        data_event_device_reference: ($) => seq("[", $.expression, "]"),

        data_event_block: ($) =>
            seq("{", repeat($._data_event_block_item), "}"),

        _data_event_block_item: ($) =>
            choice(
                $.data_event_handler,
                alias(
                    $.preproc_if_defined_in_data_event_block,
                    $.preproc_if_defined,
                ),
                alias(
                    $.preproc_if_not_defined_in_data_event_block,
                    $.preproc_if_not_defined,
                ),
                $.preproc_define,
                $.preproc_include,
                $.preproc_warn,
                $.preproc_disable_warning,
            ),

        data_event_handler: ($) =>
            seq(
                field("type", $.data_event_type),
                ":",
                field("body", $.compound_statement),
            ),

        data_event_type: ($) =>
            choice(
                $.command_keyword,
                $.string_keyword,
                $.online_keyword,
                $.offline_keyword,
                $.onerror_keyword,
                $.standby_keyword,
                $.awake_keyword,
            ),

        timeline_event_definition: ($) =>
            seq(
                $._timeline_event_declarator_list,
                field("body", $.compound_statement),
            ),

        _timeline_event_declarator_list: ($) =>
            seq(
                $.timeline_event_declarator,
                repeat(
                    choice(
                        $.timeline_event_declarator,
                        alias(
                            $.preproc_if_defined_in_timeline_event_declarator,
                            $.preproc_if_defined,
                        ),
                        alias(
                            $.preproc_if_not_defined_in_timeline_event_declarator,
                            $.preproc_if_not_defined,
                        ),
                        $.preproc_define,
                        $.preproc_include,
                    ),
                ),
            ),

        timeline_event_declarator: ($) =>
            seq(
                $.timeline_event_keyword,
                field("id", $.timeline_event_id_reference),
            ),

        timeline_event_id_reference: ($) => seq("[", $.expression, "]"),

        button_event_definition: ($) =>
            seq(
                $._button_event_declarator_list,
                field("body", $.button_event_block),
            ),

        _button_event_declarator_list: ($) =>
            seq(
                $.button_event_declarator,
                repeat(
                    choice(
                        $.button_event_declarator,
                        alias(
                            $.preproc_if_defined_in_button_event_declarator,
                            $.preproc_if_defined,
                        ),
                        alias(
                            $.preproc_if_not_defined_in_button_event_declarator,
                            $.preproc_if_not_defined,
                        ),
                        $.preproc_define,
                        $.preproc_include,
                    ),
                ),
            ),

        button_event_declarator: ($) =>
            seq(
                $.button_event_keyword,
                field("devchan", $.button_event_devchan_reference),
            ),

        button_event_devchan_reference: ($) =>
            choice($.devchan_expression, seq("[", $.expression, "]")),

        button_event_block: ($) =>
            seq("{", repeat($._button_event_block_item), "}"),

        _button_event_block_item: ($) =>
            choice(
                $.button_event_handler,
                alias(
                    $.preproc_if_defined_in_button_event_block,
                    $.preproc_if_defined,
                ),
                alias(
                    $.preproc_if_not_defined_in_button_event_block,
                    $.preproc_if_not_defined,
                ),
                $.preproc_define,
                $.preproc_include,
                $.preproc_warn,
                $.preproc_disable_warning,
            ),

        button_event_handler: ($) =>
            seq(
                field("type", $.button_event_type),
                ":",
                field("body", $.compound_statement),
            ),

        button_event_type: ($) =>
            choice(
                $.push_keyword,
                $.release_keyword,
                choice(
                    // HOLD[time[, repeat]]
                    seq(
                        $.hold_keyword,
                        seq(
                            "[",
                            field("time", $.expression),
                            optional(seq(",", $.button_event_hold_repeat)),
                            "]",
                        ),
                    ),
                ),
            ),

        button_event_hold_repeat: ($) => $.repeat_keyword,

        level_event_definition: ($) =>
            seq(
                $._level_event_declarator_list,
                field("body", $.compound_statement),
            ),

        _level_event_declarator_list: ($) =>
            seq(
                $.level_event_declarator,
                repeat(
                    choice(
                        $.level_event_declarator,
                        alias(
                            $.preproc_if_defined_in_level_event_declarator,
                            $.preproc_if_defined,
                        ),
                        alias(
                            $.preproc_if_not_defined_in_level_event_declarator,
                            $.preproc_if_not_defined,
                        ),
                        $.preproc_define,
                        $.preproc_include,
                    ),
                ),
            ),

        level_event_declarator: ($) =>
            seq(
                $.level_event_keyword,
                field("devlev", $.level_event_devlev_reference),
            ),

        level_event_devlev_reference: ($) =>
            choice($.devlev_expression, seq("[", $.expression, "]")),

        channel_event_definition: ($) =>
            seq(
                $._channel_event_declarator_list,
                field("body", $.channel_event_block),
            ),

        _channel_event_declarator_list: ($) =>
            seq(
                $.channel_event_declarator,
                repeat(
                    choice(
                        $.channel_event_declarator,
                        alias(
                            $.preproc_if_defined_in_channel_event_declarator,
                            $.preproc_if_defined,
                        ),
                        alias(
                            $.preproc_if_not_defined_in_channel_event_declarator,
                            $.preproc_if_not_defined,
                        ),
                        $.preproc_define,
                        $.preproc_include,
                    ),
                ),
            ),

        channel_event_declarator: ($) =>
            seq(
                $.channel_event_keyword,
                field("devchan", $.channel_event_devchan_reference),
            ),

        channel_event_devchan_reference: ($) =>
            choice($.devchan_expression, seq("[", $.expression, "]")),

        channel_event_block: ($) =>
            seq("{", repeat($._channel_event_block_item), "}"),

        _channel_event_block_item: ($) =>
            choice(
                $.channel_event_handler,
                alias(
                    $.preproc_if_defined_in_channel_event_block,
                    $.preproc_if_defined,
                ),
                alias(
                    $.preproc_if_not_defined_in_channel_event_block,
                    $.preproc_if_not_defined,
                ),
                $.preproc_define,
                $.preproc_include,
                $.preproc_warn,
                $.preproc_disable_warning,
            ),

        channel_event_handler: ($) =>
            seq(
                field("type", $.channel_event_type),
                ":",
                field("body", $.compound_statement),
            ),

        channel_event_type: ($) => choice($.on_keyword, $.off_keyword),

        custom_event_definition: ($) =>
            seq(
                $._custom_event_declarator_list,
                field("body", $.compound_statement),
            ),

        _custom_event_declarator_list: ($) =>
            seq(
                $.custom_event_declarator,
                repeat(
                    choice(
                        $.custom_event_declarator,
                        alias(
                            $.preproc_if_defined_in_custom_event_declarator,
                            $.preproc_if_defined,
                        ),
                        alias(
                            $.preproc_if_not_defined_in_custom_event_declarator,
                            $.preproc_if_not_defined,
                        ),
                        $.preproc_define,
                        $.preproc_include,
                    ),
                ),
            ),

        custom_event_declarator: ($) =>
            seq(
                $.custom_event_keyword,
                field("reference", $.custom_event_reference),
            ),

        custom_event_reference: ($) =>
            seq(
                "[",
                choice(
                    // Format 1: [DEVICE,ID,TYPE]
                    seq(
                        field("device", $.expression),
                        ",",
                        field("id", $.expression),
                        ",",
                        field("type", $.expression),
                    ),

                    // Format 2: [DEVCHAN,EVENTID]
                    seq(
                        field("devchan", $.expression),
                        ",",
                        field("eventid", $.expression),
                    ),
                ),
                "]",
            ),

        push_event_definition: ($) =>
            seq(
                $._push_event_declarator_list,
                field("body", $.compound_statement),
            ),

        _push_event_declarator_list: ($) =>
            seq(
                $.push_event_declarator,
                repeat(
                    choice(
                        $.push_event_declarator,
                        alias(
                            $.preproc_if_defined_in_push_event_declarator,
                            $.preproc_if_defined,
                        ),
                        alias(
                            $.preproc_if_not_defined_in_push_event_declarator,
                            $.preproc_if_not_defined,
                        ),
                        $.preproc_define,
                        $.preproc_include,
                    ),
                ),
            ),

        push_event_declarator: ($) =>
            seq(
                $.push_keyword,
                field("devchan", $.push_event_devchan_reference),
            ),

        push_event_devchan_reference: ($) =>
            choice($.devchan_expression, seq("[", $.expression, "]")),

        release_event_definition: ($) =>
            seq(
                $._release_event_declarator_list,
                field("body", $.compound_statement),
            ),

        _release_event_declarator_list: ($) =>
            seq(
                $.release_event_declarator,
                repeat(
                    choice(
                        $.release_event_declarator,
                        alias(
                            $.preproc_if_defined_in_release_event_declarator,
                            $.preproc_if_defined,
                        ),
                        alias(
                            $.preproc_if_not_defined_in_release_event_declarator,
                            $.preproc_if_not_defined,
                        ),
                        $.preproc_define,
                        $.preproc_include,
                    ),
                ),
            ),

        release_event_declarator: ($) =>
            seq(
                $.release_keyword,
                field("devchan", $.release_event_devchan_reference),
            ),

        release_event_devchan_reference: ($) =>
            choice($.devchan_expression, seq("[", $.expression, "]")),

        compound_statement: ($) => seq("{", repeat($._block_item), "}"),

        subscript_expression: ($) =>
            prec(
                PREC.SUBSCRIPT,
                seq(
                    field("argument", $.expression),
                    repeat1(
                        seq("[", field("index", optional($.expression)), "]"),
                    ),
                ),
            ),

        identifier: (_) => /[_a-zA-Z][_a-zA-Z0-9]*/,
